# express-teacher

./: LICENSE  docker-compose.yml
chat/server/: Dockerfile  app.js
chat/ui/: Dockerfile  README.md  package-lock.json  package.json
chat/ui/src/app/: layout.tsx  page.tsx  socket.tsx
chat/ui/src/app/components/: ChatBox.tsx  ConSensor.tsx  InputComp.tsx  Spacer.tsx
core/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
core/src/: getter.py  getter2.py  history_aware_getter.py  setter.py  sitelist.py
